--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
-    "adonis-firebase-admin": "^1.1.3"
+    "adonis-firebase-admin": "^1.1.3",
+    "jimp": "^0.6.0"
   },
   "devDependencies": {},
   "autoload": {
@@ -36,5 +37,5 @@
     "esversion": 8,
     "asi": true,
     "module": true
-  }   
+  }
 }
